--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
   font-size: 62.5%;
 }
 
-body {
+html {
   width: 100%;
   height: 100%;
 }
@@ -29,7 +29,7 @@ body {
 .section-hero h1 {
   color: white;
   text-align: center;
-  font-size: 5rem;
+  font-size: 6rem;
   font-weight: bold;
   letter-spacing: 0.5rem;
   padding-top: 20rem;
@@ -104,6 +104,7 @@ body {
 .contact-form {
   display: flex;
   color: white;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   margin: 5rem auto 0 auto;
@@ -117,6 +118,10 @@ body {
   clip-path: polygon(50% 0, 100% 10%, 100% 100%, 50% 100%, 0 100%, 0 10%);
 }
 
+.contact-form form {
+  width: 100%;
+}
+
 .contact-form h2 {
   margin: 10rem auto 5rem auto;
   font-size: 3rem;
@@ -125,21 +130,28 @@ body {
 }
 
 .contact-form label {
+  display: block;
   font-size: 1.8rem;
+  padding-left: 20%;
 }
 
 .contact-form input {
+  display: block;
   padding: 0.5rem;
-  width: 100%;
-  margin: 1rem 0;
+  width: 60%;
+  margin: 1rem auto 1rem auto;
 }
 
 .contact-form textarea {
+  display: block;
   margin: 1rem 0;
+  width: 60%;
+  margin: 1rem auto 1rem auto;
 }
 
 .contact-form button {
-  width: 30rem;
+  width: 15%;
+  margin-left: 20%;
   height: 4rem;
   font-size: 1.8rem;
 }
@@ -148,4 +160,37 @@ body {
   background-color: rgba(57, 62, 70, 0.9);
   color: white;
   border: 1px inset grey;
+  cursor: pointer;
+}
+
+.footer-container {
+  display: grid;
+  font-size: 1.6rem;
+  padding: 1rem;
+  width: 60%;
+  margin: 0 auto;
+  justify-content: space-between;
+  align-items: center;
+  grid-template-columns: repeat(4, 25%);
+  text-align: center;
+}
+
+.footer-container a:link,
+.footer-container a:visited {
+  text-decoration: none;
+  color: black;
+  display: block;
+  padding: 1rem;
+  width: 100%;
+  height: 100%;
+}
+
+.footer-container a:hover {
+  background-color: grey;
+}
+
+.link-p {
+  margin-bottom: 1rem;
+  width: 100%;
+  height: 100%;
 }
